overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ img {
   }
 }
 
-@media (min-width: 1280px) {
+@media (max-width: 1280px) {
   body {
     overflow-x: auto;
   }
